
TODO: DEC PM 4h/4l should toggle jumpscroll on or off (PrivMode_smoothScroll)
TODO: pack rxvt_fatal messages into the exception object
TODO: catch exceptions when calling perl hooks
TODO: find out about overhead of NOTHROW
TODO: xrender, versiobn check for filters, or use query filters instead?
TODO: something resets the bg pixmap afetr on_start
9.16
	- the "alpha" release.
	- remove support for libafterimage.
	- fix processing of DEC private mode save sequences (patch by Patrick
	  Hemmer).
	- fix disabling of cursor blink with the option-popup menu (based on a
	  patch by Jan Larres).
	- the font height is not augmented anymore when lineSpace is non zero.
	- fix "new pagemap" vs. "delete pagemap" mismatch ([] vs. non-[]),
          as diagnosed by clang.
	- fix height mismatch between active and inactive cursor when
	  lineSpace is non zero (patch by Stanislav Seletskiy).
        - make it compile with LOCAL_X_IS_UNIX again (reported by
          nickfailure@gmail.com).
        - update to CVS version of libev, for a whopping 11kb size decrease.
        - do not ship yet another copy of ecb.h, use the one in libev or
          libptytty instead.
        - allocate all screen memory in one go and let the virtual memory
          subsystem sort it out. this simplifies code, improves access
          locality, saves a bit of ram and makes things a bit faster, too.
        - selectively mark some methods as cache-hot/cache cold, which
          might speed up execution but definitely decreases codesize.
        - new env variable: RXVT_PERL_LIB.
        - iso14755 51 mode window now displays row and column.
        - perl extensions can now provide commandline switches and resources
          which show up in -help etc.

9.15 Sat Jan 21 13:36:56 CET 2012
	- remove "using namespace std" because clang erroneously
          thinks thats an error.
	- finding a matching font (e.g. bold version of the base font)
	  was broken (reported by Eamon Walker).