@@ -2,7 +2,7 @@
 
 #:META:X_RESOURCE:%.expr:string:background expression
 #:META:X_RESOURCE:%.enable:boolean:some boolean
-#:META:X_RESOURCE:%.extra.*:value:extra config
+#:META:X_RESOURCE:%.extra.:value:extra config
 
 our $EXPR = 'move load "/root/pix/das_fette_schwein.jpg", repeat_wrap, X, Y';
 $EXPR = '
