@@ -1,5 +1,7 @@
 #! perl
 
+#:META:X_RESOURCE:url-launcher:string:shell command to use
+
 sub msg {
    my ($self, $msg) = @_;
 
@@ -14,7 +16,7 @@ sub msg {
 sub on_start {
    my ($self) = @_;
 
-   $self->{browser} = $self->x_resource ("urlLauncher") || "sensible-browser";
+   $self->{browser} = $self->x_resource ("url-launcher") || "sensible-browser";
 
    $self->grab_button (3, urxvt::ControlMask);
 
