@@ -27,8 +27,10 @@ TODO: catch exceptions when calling perl hooks
 TODO: find out about overhead of NOTHROW
 TODO: xrender, versiobn check for filters, or use query filters instead?
 TODO: something resets the bg pixmap afetr on_start
+TODO: provide something like % for easy access for parse_keysym and x_resource*
 9.16
-	- the "alpha" release.
+	- the "so much new stuff you eyes will pop out" release.
+        - INCOMPATIBLE CHANGE: renamed urlLauncher resource to url-launcher.
 	- remove support for libafterimage.
 	- fix processing of DEC private mode save sequences (patch by Patrick
 	  Hemmer).
